# FLAMEGPU2-circles-benchmark

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  plot.py  plot_comparisons.py  plot_figure.py  plot_publication.py  requirements.txt
cmake/: flamegpu2.cmake
sample/: readme.md
sample/comparisons/h100-a100-v100-fixed-density/: combined-h100-a100-v100-fixed-density.csv  config.yml
sample/data/: fixed-density_perSimulationCSV.csv  fixed-density_perStepPerSimulationCSV.csv  variable-density_perSimulationCSV.csv  variable-density_perStepPerSimulationCSV.csv
sample/data/3080-11.2-495.29.05/alpha.2-3080-11.0-beltsoff/: comm-radius_perSimulationCSV.csv  comm-radius_perStepPerSimulationCSV.csv  fixed-density_perSimulationCSV.csv  fixed-density_perStepPerSimulationCSV.csv  variable-density_perSimulationCSV.csv
sample/data/3080-11.2-495.29.05/alpha.2-3080-11.2-beltsoff/: comm-radius_perSimulationCSV.csv  comm-radius_perStepPerSimulationCSV.csv  fixed-density_perSimulationCSV.csv  fixed-density_perStepPerSimulationCSV.csv  variable-density_perSimulationCSV.csv
sample/data/a100-510.73.08/620e904-a100-11.4-beltsoff/: comm-radius_perSimulationCSV.csv  fixed-density_perSimulationCSV.csv  sort-period_perSimulationCSV.csv  variable-density_perSimulationCSV.csv
sample/data/a100-525.105.17/2.0.0-rc-a100-11.8-beltsoff-apptainer/: comm-radius_perSimulationCSV.csv  fixed-density_perSimulationCSV.csv  (+2 more)
sample/figures/: processed_fixed-density_perSimulationCSV.csv  processed_fixed-density_perStepPerSimulationCSV.csv  processed_variable-density_perSimulationCSV.csv  processed_variable-density_perStepPerSimulationCSV.csv
scripts/slurm/: compile.a100-tmp.sh  compile.bessemer.sh  compile.stanage.sh  run.a100-tmp.sh  run.apptainer.bessemer.sh  run.apptainer.stanage-a100.sh  run.apptainer.stanage-h100.sh  run.bessemer.sh  run.stanage-a100.sh  run.stanage-h100.sh
src/: circles_bruteforce.cu  circles_bruteforce_rtc.cu  circles_bruteforce_rtc_sorted.cu  circles_bruteforce_sorted.cu  circles_spatial3D.cu  circles_spatial3D_rtc.cu  common.cuh  main.cu  util.cuh
(+143 files in other folders)
